[project]
name = "gemini-x-note-writer"
version = "0.1.1"
description = "Using Gemini and API Note Writer to create X notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.24.0",
    "pillow>=10.0.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "requests>=2.32.3",
    "ruff>=0.12.0",
    "yagooglesearch>=1.9.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
]
